improved home page, added submit page, made tables look better

--- a/html/course.html
+++ b/html/course.html
@@ -89,18 +89,12 @@
                         <li class="dropdown nav-li-wrapper">
                             <a href="marks.html" class="nav-link-a" role="button">Marks</a>
                         </li>
-
-                        <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Submission</a>
-                        </li>
-
                     </ul>
                 </div><!-- /.navbar-collapse -->
 
             </div><!-- /.container-fluid -->
         </nav>
     </div>
-
 
 
     <div id="body" style="padding:10px 40px 40px 40px;">
@@ -119,7 +113,7 @@
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
 
-                        <table class="table" style="max-width: 800px;">
+                        <table class="table" style="">
                             <thead>
                             <tr>
                                 <th>Week</th>
@@ -152,7 +146,9 @@
 
                             <tr>
                                 <td></td>
-                                <td>Machine Learning 1: Basics, types, paradigms, training set vs test set, generalisation</td>
+                                <td>Machine Learning 1: Basics, types, paradigms, training set vs test set,
+                                    generalisation
+                                </td>
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td><a href="#"><img src="../images/play.jpg" class="pdf-icon"/> </a></td>
                             </tr>
@@ -183,13 +179,13 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn-block">
-                        <h4 class="panel-title">Assignments</h4>
+                        <h4 class="panel-title">Assignments / Submission</h4>
                     </a>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
                     <div class="panel-body">
 
-                        <table class="table" style="max-width: 800px;">
+                        <table class="table" style="">
                             <thead>
                             <tr>
                                 <th>Title</th>
@@ -197,6 +193,8 @@
                                 <th>Download</th>
                                 <th>Percentage</th>
                                 <th>Due Date</th>
+                                <th>Submit</th>
+
                             </tr>
                             </thead>
                             <tbody>
@@ -206,6 +204,8 @@
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>25%</td>
                                 <td><p>3/07/2017</td>
+                                <td><button class="btn btn-primary" href="submit.html">Submit</button> </td>
+
                             </tr>
                             <tr>
                                 <td>Assignment Two</td>
@@ -213,6 +213,7 @@
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>15%</td>
                                 <td><p>3/07/2017</td>
+                                <td><button class="btn btn-primary" href="submit.html">Submit</button> </td>
                             </tr>
 
                             </tbody>
@@ -302,7 +303,8 @@
                                                                  data-wow-duration=".7s">
                                                                 <div class="card">
                                                                     <div class="card-image waves-effect waves-block waves-light">
-                                                                        <h2 class="left-align card-title-top">2000 -                                                                         2017 -
+                                                                        <h2 class="left-align card-title-top">2000 -
+                                                                            2017 -
                                                                             Present</h2>
                                                                         <div class="valign-wrapper card-img-wrap">
                                                                             <img class="activator"
@@ -321,7 +323,6 @@
                                                                                 class="mdi-navigation-close right"></i></span>
                                                                             <p>Coordinator</p>
                                                                         </div>
-                                                                        <!--<p class="rev-content">-->
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn</li>
@@ -329,9 +330,6 @@
                                                                                 <li>04 4635654</li>
                                                                             </ul>
                                                                         </div>
-
-
-                                                                        <!--</p>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -360,7 +358,6 @@
                                                                                 class="mdi-navigation-close right"></i></span>
                                                                             <p>Lecturer</p>
                                                                         </div>
-                                                                        <!--<p class="rev-content">-->
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn</li>
@@ -368,9 +365,6 @@
                                                                                 <li>04 4635652</li>
                                                                             </ul>
                                                                         </div>
-
-
-                                                                        <!--</p>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -379,7 +373,8 @@
                                                                  data-wow-duration=".7s">
                                                                 <div class="card">
                                                                     <div class="card-image waves-effect waves-block waves-light">
-                                                                        <h2 class="left-align card-title-top">2016 -                                                                        2017 -
+                                                                        <h2 class="left-align card-title-top">2016 -
+                                                                            2017 -
                                                                             Present</h2>
                                                                         <div class="valign-wrapper card-img-wrap">
                                                                             <img class="activator"
@@ -406,14 +401,9 @@
                                                                                 <li>04 4635652</li>
                                                                             </ul>
                                                                         </div>
-
-
-                                                                        <!--</p>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
-
-
                                                         </div>
                                                     </div>
                                                 </div>
@@ -438,10 +428,15 @@
                     </a>
                 </div>
                 <div id="collapse5" class="panel-collapse collapse">
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                    <div class="panel-body" style="f">
+                        <a href="#">ECS Bugs</a> <br>
+                        <a href="#">Eclipse help</a><br>
+                        <a href="#">Tech Notes</a><br>
+                        <a href="#">ECS Girls</a><br>
+                        <a href="#">Forum</a><br>
+                        <a href="#">Documentation</a><br>
+                        <a href="#">Complaints</a><br>
+                        <a href="#">Grad Advice</a><br>
                     </div>
                 </div>
             </div>
