--- a/index.html
+++ b/index.html
@@ -66,20 +66,6 @@
     </div>
 </div>
     </div>
-
-    <div class="one_third">
-        <h6 class="title">egestas diam sollicitudin</h6>
-        <ul class="nospace linklist">
-            <li><a href="#">non fusce quis dictum vitae accumsan</a></li>
-            <li><a href="#">erat in hac habitasse platea dictumst</a></li>
-            <li><a href="#">sed mi arcu mattis gravida feugiat</a></li>
-            <li><a href="#">aliquam nunc etiam neque lobortis</a></li>
-            <li><a href="#">tristique integer nunc eget dictum</a></li>
-        </ul>
-    </div>
-
-
-
 </div>
 
 
@@ -98,7 +84,7 @@
 
 <div class="popupLogin">
 <form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
-    <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
+    <h3 class="form-signin-heading">Log In</h3>
 
     <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus=""/>
     <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
