fixed nav bar bug and added images on homepage

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -165,6 +165,72 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-sm-3 cold-xs-12 single-card-box wow fadeInUpSmall"
+                 data-wow-duration=".7s" style="padding:5px !important;">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <div class="valign-wrapper card-img-wrap">
+                            <img class="activator"
+                                 src="../images/research.jpg"
+                                 alt="">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                                        <span class="card-title activator brand-text">Research
+                                            <i class="mdi-navigation-more-vert right"></i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <div class="rev-title-wrap">
+                                            <span class="card-title activator brand-text">Research
+                                                <i class="mdi-navigation-close right"></i></span>
+                        </div>
+                        <div style="padding:20px;">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3 cold-xs-12 single-card-box wow fadeInUpSmall"
+                 data-wow-duration=".7s" style="padding:5px !important;">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <div class="valign-wrapper card-img-wrap">
+                            <img class="activator"
+                                 src="../images/staff.jpg"
+                                 alt="">
+                        </div>
+                    </div>
+                    <div class="card-content">
+                                        <span class="card-title activator brand-text">Our Staff
+                                            <i class="mdi-navigation-more-vert right"></i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <div class="rev-title-wrap">
+                                            <span class="card-title activator brand-text">Our Staff
+                                                <i class="mdi-navigation-close right"></i></span>
+                        </div>
+                        <div style="padding:20px;">
+                            <p>Open to all Victoria University of Wellington students
+                                interested in Engineering, Computer science, or
+                                technology in general.</p>
+
+                            <p>Check out upcoming events on the <br>
+                                <a href="https://www.google.com/calendar/embed?src=duckalini%40gmail.com&ctz=Pacific%2FAuckland">VEC
+                                    Google Calendar</a>
+                                <br><br>
+                                Contact us: <br>
+                                <a href="mailto:president@vec.org.nz" target="_top"
+                                   style="margin-right:5px;">Email</a>our President
+                                <br>
+                                Or find us on
+                                <a href="https://www.facebook.com/engrclub">Facebook</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
