--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 <script src="layout/scripts/jquery.min.js"></script>
 
 
-
-
 <!-- Boot strap -->
 <script src="layout/scripts/bootstrap.min.js"></script>
 
@@ -33,18 +31,12 @@
 
         <!-- Banner bar -->
         <nav class="navbar navbar-inverse" style="padding-bottom:0;">
-
             <a href="index.html">
                 <img src="images/vic_logo.jpg" style="height:60px; float:left; margin: auto 0; margin-left: 40px;"/>
                 <img src="images/logo.jpg" style="height:50px; float:left; margin: auto 0; margin-left: 40px;"/>
             </a>
-
         </nav>
     </div>
-
-
-
-
 
     <div class="wrapper bgded overlay" style="background-image:url('images/banner.jpg');">
         <div id="pageintro" class="hoc clear">
@@ -52,7 +44,7 @@
                 <h2 class="heading">Welcome to Victoria</h2>
                 <p>Where children get molested and dreams go to die</p>
                 <footer>
-                    <ul  class="nospace inline pushright">
+                    <ul class="nospace inline pushright">
                         <li><a id="current" class="btn">Current Student</a></li>
                         <li><a class="btn inverse" href="html/about-compsci.html">Prospective Student</a></li>
                     </ul>
@@ -60,12 +52,14 @@
             </article>
         </div>
         <div class="wrapper row5 footer" id="footer">
-    <div id="copyright" class="hoc clear">
-        <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University
-            Wellington</a></p>
+            <div id="copyright" class="hoc clear">
+                <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Victoria University
+                    Wellington</a></p>
+            </div>
+        </div>
     </div>
-</div>
-    </div>
+
+
 </div>
 
 
@@ -79,18 +73,19 @@
 <!-- / IE9 Placeholder Support -->
 
 
-
-   <div class="overlayLogin"></div>
+<div class="overlayLogin"></div>
 
 <div class="popupLogin">
-<form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
-    <h3 class="form-signin-heading">Log In</h3>
+    <form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
+        <h3 class="form-signin-heading">Log In</h3>
 
-    <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus=""/>
-    <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
+        <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus=""/>
+        <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
 
-    <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"  onclick="window.location.href='html/homepage.html'">Login</button>
-</form>
+        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
+                onclick="window.location.href='html/homepage.html'">Login
+        </button>
+    </form>
 </div>
 
 <script>
